    * You can now cook a recipe that has a superclass that is defined  
      locally but a has supersuperclass that is in the repository.  Similarly,
      if you have a superclass that is in the repository but a supersuperclass
      locally, conary will find that as well 
    * r.Replace with parameters in the wrong order will now behave correctly
  o Code structure:
    * queryrep, query, showchangeset, and update --info all use the same 
      code to determine how to display their data.  Display.py was changed
      to perform general display operations.
    * query.py added
    * added JobSource concept for searching and manipulating lists of jobs.
    * moved datastore.py into repository module
    * Stubs have been added for adding python and perl dependencies, and
      the stubs have been set to be initially ignored.
    * The internal structure for conary configuration objects has changed
    * A new DYNAMIC size has been added to the StreamSet object.  This will
      cause StreamSet to use either a short or long int to store the size
      of the frozen data that is included in a frozen StreamSet, depending
      on the size of the data being stored.

Changes in 0.71.2
  o Client Changes:
    * The update-conary option has been renamed updateconary per
      bugzilla #428
    * buildPath can be set in contexts
    * cvc co <foo> will work even if there are two foos on the same label with
      different branches.  In that case, it will warn about the older foo 
      which it doesn't check out
    * Test mode didn't work for updates and erases which were split into
      multiple jobs
  o Build Changes:
    * Combined the EtcConfig and Config policies, and deprecated
      the EtcConfig policy.
    * All config files default to being put into a :config component.
      This is overridden by any ComponentSpec specifications in the recipe.
    * A use flag has been added for xen defaulting to 'sense prefernot'.  This