@@ -564,7 +564,10 @@ class ComponentSpec(_filterSpec):
         if '_config' in keywords:
             config=keywords.pop('_config')
             self.recipe.PackageSpec(_config=config)
-            self.extraFilters.append(('config', util.literalRegex(config)))
+            # disable creating the automatic :config component
+            # until/unless we handle files moving between
+            # components
+            #self.extraFilters.append(('config', util.literalRegex(config)))
 	_filterSpec.updateArgs(self, *args, **keywords)
 
     def doProcess(self, recipe):
